--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             text-align: center;
             margin-top: 8px;
             font-size: 13px;
-            color: #a89aa3;
+            color: #5c2f4c;
         }
 
         @media (max-width: 768px) {
@@ -764,7 +764,7 @@
         <div id="passwordBox" class="password-box">
             <div class="cat-icon">🎀💕</div>
             <h2 class="title">Mật khẩu tình yêu</h2>
-            <p class="subtitle">Anh nhập mật khẩu để xem quà nhé! 🎁</p>
+            <p class="subtitle">Anh nhập mật khẩu để xem quà nhoa! 🎁</p>
             <div style="position:relative; display:flex; align-items:center; gap:12px;">
                 <input type="password" id="passwordInput" class="password-input" placeholder="••••••" maxlength="6"
                     aria-label="Mật khẩu">
@@ -780,8 +780,8 @@
     <div id="page2" class="page hidden">
         <div class="letter-container">
             <div class="letter-header">
-                <h1>💌 Thư Tình Gửi Anh 💌</h1>
-                <p>Mở thư để đọc lời nhắn từ em nhé!</p>
+                <h1>💌 Thư Gửi Tặng Anh 💌</h1>
+                <p>Mở thư để đọc lời nhắn từ em nek!</p>
             </div>
 
             <div class="envelope-wrapper" id="envelopeWrapper">
@@ -792,7 +792,7 @@
             </div>
 
             <div id="letterContent" class="letter-content hidden">
-                <h2 class="letter-title">💕 Gửi Anh Yêu Của Em 💕</h2>
+                <h2 class="letter-title">💕 Gửi Anh Yêu Của Bé</h2>
                 <div id="message" class="message"></div>
                 <div class="letter-signature">
                     💖 Yêu anh, Em 💖
@@ -812,8 +812,8 @@
 
         <div class="gallery-container">
             <div class="gallery-header">
-                <h1>💕 Kỷ Niệm Của Chúng Mình 💕</h1>
-                <p>Những khoảnh khắc đẹp nhất bên anh!</p>
+                <h1>💕 Kỷ Niệm Của Anh Và Bé Nè 💕</h1>
+                <p>Siu cute và dễ huôngggg !</p>
             </div>
             <!-- Two-column area: attributes (left) + stickers+carousel (right) -->
             <div class="gallery-grid">
@@ -868,8 +868,8 @@
                         </div>
                     </div>
 
-                    <div class="attributes-quote">"Em yêu anh nhiều lắm!" 💕💕💕</div>
-                    <div class="attributes-note">Chúc anh một ngày thật vui vẻ và ý nghĩa ✨</div>
+                    <div class="attributes-quote">"Bé iuuuuu anhh iuuuu nhìuuuu !" 💕💕💕</div>
+                    <div class="attributes-note">Chúc anh một ngày 19.11 thật vui vẻ và ý nghĩa nheee ✨</div>
 
                     <div class="stickers" style="margin-top:18px;">
                         <span class="sticker">🐱</span>
@@ -884,12 +884,12 @@
 
         <script>
             // ============ PAGE 1: PASSWORD ============
-            const correctPass = '191124';
+            const correctPass = '030125';
             const errors = [
-                '🥺 Ơ kìaa~ Sao anh không nhớ mật khẩu vậy?',
-                '😾 Hmph! Sai rồi anh ơiii~',
-                '🐱 Mèo mèo! Đoán lại đi anh!',
-                '💕 Gợi ý: 19 11 năm 2024 đóoo~',
+                '🥺 Ơ kìaa~ Giỡn giỡn hả anh. Sao anh honggg nhớ !!!',
+                '😾 Hmm ! Sai rồi anh ơiii~',
+                '🐱 Hự! Đoán lại đi anh!',
+                '💕 Gợi ý: ở quán Ghé đóoo ạ',
                 '😤 Giỡn giỡn hở anh yêu ơi! Nhớ kỹ vào!',
                 '🎀 Hint: DDMMYY (6 số) nha anh!'
             ];
@@ -1003,19 +1003,21 @@
             function typeMessage() {
                 const text = `Chào anh yêu của em! 💕
 
-Hôm nay là ngày 19/11 - Quốc tế Nam giới, em muốn dành tặng anh những lời chúc tốt đẹp nhất từ trái tim em!
+Hôm nay là ngày 19/11 – Quốc tế Nam giới, em muốn gửi tặng anh vài lời chúc siu đáng iu qua món quà bất ngờ này hihi 💗
 
-Cảm ơn anh vì đã luôn ở bên em, chăm sóc em, yêu thương em trong từng khoảnh khắc. Anh là người đàn ông tuyệt vời nhất, là chỗ dựa vững chắc và là nguồn động viên lớn lao nhất của em! 
+Cảm ơn anh vì luôn đồng hành cùng em, luôn quan tâm, yêu thương và ủng hộ em trong mọi chuyện. Anh là người bạn trai tuyệt vời, vững vàng và đáng tin nhất trong cuộc sống của em. Em trân trọng từng khoảnh khắc hai đứa bên nhau và mong mình sẽ còn đi cùng nhau thật xa.
 
-Em chúc anh:
-✨ Luôn mạnh khỏe, tràn đầy năng lượng
-💪 Thành công rực rỡ trong sự nghiệp
-💖 Hạnh phúc và may mắn trong cuộc sống
-🌟 Mãi mãi là chàng trai tuyệt vời trong lòng em
+Chúc anh một ngày thật vui và luôn giữ được sự mạnh mẽ, ấm áp và tử tế mà em luôn yêu ở anh.
 
-Em hứa sẽ luôn ở bên anh, yêu anh, và làm anh hạnh phúc mỗi ngày! 
+Bé chúc anh:
+✨ Luôn mạnh khỏe, mãi luôn tươi cười, vì lúc anh cười là đẹp nhấttt
+💪 Thành công rực rỡ trong học tập và sự nghiệp
+💖 Hạnh phúc và may mắn trong cuộc sống sẽ đến với anh
+🌟 Mãi mãi là chàng trai tuyệt vời trong lòng emmmm
 
-Yêu anh rất rất nhiều! 🐱💕`;
+Em hứa sẽ luôn là vợ iu ngoan ngoãn, nghe lời chồng iuuu, luôn ở bên anh, yêu anh, và làm anh hạnh phúc mỗi ngày! 
+
+Yêu anh nhiềuuuuuu, yêuuuuuu anhh nhất nhất lungggg ! 🐱💕`;
 
                 const msgEl = document.getElementById('message');
                 let i = 0;
